kind/hello-ingress.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello
  name: hello-svc
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: hello
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: hello-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: pram.id
    http:
      paths:
      - backend:
          service:
            name: hello-svc
            port:
              number: 80
        path: /
        pathType: Prefix
